log

Wed 13 Mar 2024 08:38:01 PM UTC: 
 tests:  0|7
total_score: 0/70
1d762fd
Wed 13 Mar 2024 08:43:20 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:13:17: error: expected expression before ‘]’ token
   13 |   int max = arr[];
      |                 ^
Compilation failed
b6e329b
Wed 13 Mar 2024 08:44:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
bbd1b3d
Wed 13 Mar 2024 08:48:57 PM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
a0bb704
Wed 13 Mar 2024 08:51:43 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
9e70b81
Wed 13 Mar 2024 08:53:45 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
0632013
Wed 13 Mar 2024 09:00:17 PM UTC: 
 exercises.c | 52 ++++++++++++++++++++++++++--------------------------
 1 file changed, 26 insertions(+), 26 deletions(-)
 tests:  0|4
total_score: 30/70
728889f
